# scale_truck_control

./: CMakeLists.txt  OpenCR.ino  README.md  TREE.MD  package.xml
OpenCR/: 0520.ino  0607.ino  OpenCR.ino  distance_model.ino
OpenCR/FV1/: FV1.ino
OpenCR/FV2/: FV2.ino
OpenCR/LV/: LV.ino
OpenCR/backup/: 0601.ino  OpenCR.ino
config/: .control.yaml.swp  FV1.yaml  FV2.yaml  LV.yaml  config.yaml  control.yaml  control.yaml~  laser_filter.yaml  lrc.yaml
etc/Controller/Controller/: Controller.pro  Controller_ko_KR.ts  controller.cpp  controller.h  controller.ui  crc.cpp  crc.hpp  main.cpp  qTh.cpp  qTh.h  sock_udp.hpp
etc/Controller/build-Controller-Desktop-Debug/: Controller  Makefile  moc_controller.cpp  moc_qTh.cpp  ui_controller.h
etc/Controller/crc/: CMakeLists.txt  crc  crc.cpp  crc.hpp  main.cpp  sock_udp.cpp
etc/Controller/crc/includes/: crc.hpp  sock_udp.hpp
etc/OpenCR/FV1/: FV1.ino  FV1_LRT.ino
etc/OpenCR/FV2/: FV2.ino
etc/OpenCR/LV/: LV.ino
etc/Track/: drawing.SLDDRW  drawing.SLDPRT  drawing2.SLDDRW  drawing_detail.SLDDRW  drawing_detail.SLDPRT  marking.SLDPRT
include/lane_detect/: lane_detect.h  lane_detect.hpp
include/lrc/: lrc.hpp
include/object_detect/: object_detect.hpp
include/scale_truck_control/: .ScaleTruckController.hpp.swp  ScaleTruckController.hpp
include/sock_udp/: sock_udp.h  sock_udp.hpp
include/zmq_class/: zmq_class.h
launch/: .control_test.launch.swp  FV1.launch  FV2.launch  FV_control.launch  LV.launch  LV_control.launch  control_test.launch  jpeg.launch  laneCam_FV1.launch  laneCam_FV2.launch  laneCam_LV.launch  lane_cam.launch  test_control.launch
msg/: .ctl.msg.swp  Range.msg  can.msg  ctl.msg  lane.msg  lane_coef.msg  lrc.msg  lrc2ocr.msg  lrc2xav.msg  mode.msg  multican.msg  ocr2lrc.msg  vel.msg  xav2lrc.msg
nodes/: control_node.cpp  lrc_node.cpp
params/: FV_gains.yaml  LV_gains.yaml
scripts/: .config.py.swp  config.py  display.py
src/: .ScaleTruckController.cpp.swp  .lane_detect.cpp.swp  FV.cpp  LV.cpp  ScaleTruckController.cpp  ScaleTruckController.cpp~  lane_detect.cpp  lrc.cpp  sock_udp.cpp  zmq_class.cpp
src/backup/0629/: object_detect.cpp
src/backup/0706/: lane_detect.cpp
src/nodes/: FV_node.cpp  LV_node.cpp
