<?xml version="1.0"?>
<package format="2">
  <name>scale_truck_control</name>
  <version>0.1.0</version>
  <description>The scale_truck_control package</description>
  <maintainer email="alruminumfire@gmail.com">jaes</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>obstacle_detector</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>obstacle_detector</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>obstacle_detector</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
  </export>
</package>
